EZ-1576: Fixed hmrc header text alignment

--- a/App/PluginWeb/EzBob.Web/Content/css/style.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/style.css
@@ -612,7 +612,7 @@ blockquote{margin:0 0 20px 0; padding:10px; border:1px #ccc solid; font-style:it
 }
 
 .hmrc_margin_from_header {
-    margin-top: 60px;
+    margin-top: 80px;
 }
 
 .hmrc_main_buttons_container {
